--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-layout": "^0.1.0",
     "express-session": "^1.17.0",
+    "layout": "^2.2.0",
     "method-override": "^3.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
