--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "layout": "^2.2.0",
     "method-override": "^3.0.0",
+    "mongoose": "^5.9.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
