--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.4",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
@@ -21,7 +22,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
